<resources>
    <string name="app_name" translatable="false">Mixological</string>
    <string name="long_mock_text" translatable="false">Working one at a time, place a chicken breast on a cutting board so a short side is towards you and holding a chef’s knife parallel to breast, slice along the middle of a long side to make a slit. Continue to slice until you are about ½” from the other side. Open breast up like a book and place between 2 sheets of wax paper or plastic wrap. Using a meat mallet or a rolling pin, pound until ⅓” thick (not making it super thin will keep it from overcooking).

        Combine garlic, lemon juice, and olive oil in a large baking dish. Season chicken cutlets all over with salt (about ¾ tsp. Diamond Crystal or ½ tsp. Morton kosher salt per cutlet). Add to marinade and turn to coat. Let sit at least 20 minutes and up to 1 hour. (The lemon juice will turn the flesh opaque, but that’s nothing to worry about.)

        Make a dredging station: Whisk eggs, garlic powder, onion powder, ½ tsp. Diamond Crystal or Morton kosher salt, and 2 Tbsp. water in a large shallow bowl (cake pans or pie plates work great). Place panko in another large shallow bowl and flour in a third. Whisk remaining 1 tsp. Diamond Crystal or ½ tsp. Morton kosher salt into flour.

        Working with 1 cutlet at a time and letting any excess marinade drip back into baking dish, dredge cutlets in flour, knocking off excess, then dip into egg wash, letting excess drip back into bowl. Dredge in panko, pressing firmly to adhere, ensuring no bare spots remain. Gently shake off excess and place cutlets on a rimmed baking sheet. Chill at least 20 minutes and up to 8 hours.

        Set a wire rack inside a second large rimmed baking sheet. Grate mozzarella on the large holes of a box grater into a medium bowl; add Parmesan and toss to combine.

        Pour vegetable oil into a large high-sided heavy skillet to come 1” up sides. Heat over medium until an instant-read thermometer registers 400°. Working in batches to avoid crowding the pan and returning oil to 400° after each batch, very carefully lower cutlets into skillet with tongs and cook until deep golden brown, about 2 minutes per side. Transfer cutlets to prepared rack; season with salt.

        Heat broiler. Arrange cutlets side by side in 2 large baking dishes or separately in 4 smaller baking dishes. Generously spoon some sauce over each cutlet (you want to mostly cover them but allow some corners and edges to remain uncovered). Spoon remaining sauce into baking dishes around the cutlets. Cover cutlets with cheese mixture (again, leaving some of those crispy edges uncovered). Broil until cheese is melted, bubbling, and browned in spots, about 4 minutes. Remove chicken from broiler. Let cool slightly and sprinkle with parsley.

    </string>

    <string name="lp_latest_drinks_header">Latest arrivals</string>
    <string name="lp_most_popular_drinks_header">Most popular</string>
    <string name="lp_recent_searches_drinks_header">Recently viewed</string>

    <string name="ingredients">Ingredients</string>
    <string name="for_you">For you</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="method">How to</string>
    <string name="notes">Notes</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorite">Remove from favorites</string>
    <string name="search">Search</string>
    <string name="advanced_search_hint">Search for a cocktail</string>
    <string name="no_results">Sorry, no results</string>
    <string name="oh_snap">Oh snap!</string>
    <string name="alcohol_volume_abv">%1$s\%% ABV.</string>
    <string name="filter_alcoholic">Alcoholic</string>
    <string name="filter_glasses">Glasses</string>
    <string name="filter_categories">Categories</string>
    <string name="filter_ingredients">Ingredients</string>
    <string name="no_description_found">No description found</string>
    <string name="search_online">search online</string>
    <string name="loading_method">Working on it…</string>
    <string name="error_title">Woooops!</string>
    <string name="error_description_connectivity">Seems like we lost our\ninternet connection, eh?\n\nGive it a looksie, would you?</string>
    <string name="error_description_timeout">Seems like we\'re a bit slow today, eh?\nThis might be related to the internet connection.\nGive it a looksie, would you?</string>
    <string name="error_description_default">Well, Something went sideways.\n\n\"To err is human, to forgive, divine.\" - Alexander Pope"</string>
    <string name="error_retry">try again</string>
    <string name="no_favorites_yet">No favorites</string>
    <string name="no_favorites_description">Apparently, nothing is good enough for you</string>
    <string name="filters">Filters</string>
    <string name="offline">Offline</string>
    <string name="network_unavailable">Your network is unavailable.\nCheck your data or wifi connection.</string>
    <string name="ingredient_search_hint">Search for ingredient</string>
    <string name="settings">Settings</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="dark_mode_description">Enable or disable dark mode</string>
    <string name="no_search_activity_found">Looks like you don\'t have a web browser installed. What\'s up with that?</string>
    <string name="no_voice_recognition_activity_found">Looks like your device doesn\'t support voice recognition. What\'s up with that?</string>
    <string name="conversion_mode_title">Unit conversions</string>
    <string name="conversion_mode_description">Convert measurements to metric/imperial system, or keep the original recipe system</string>
    <string name="original">Original</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="filter_toggle_failure">Oh snap! something went sideways…</string>
    <string name="choice_and">and</string>
    <string name="choice_or">or</string>
    <string name="settings_version">version %1$s</string>
</resources>
