<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_title_tv"
        style="@style/MyToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.yanivsos.mixological.ui.views.SettingsSwitch
        android:id="@+id/settings_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/screen_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title_tv"
        app:ss_description="@string/dark_mode_description"
        app:ss_title="@string/dark_mode_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_version_tv"
        style="@style/SettingsItemSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
