<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lottie_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_lottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@id/lottie_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_connection" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_title"
        style="@style/ErrorTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_title"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/vertical_guideline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_description"
        style="@style/ErrorDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_description_connectivity"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/error_title"
        tools:text="@string/error_description_default" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_retry_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fty_delirium_ncv"
        android:letterSpacing="0.25"
        android:text="@string/error_retry"
        android:textColor="?attr/colorPrimary"
        android:textSize="26sp"
        app:backgroundTint="?attr/colorAccent"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/error_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
