<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BottomDialogCard"
    app:shapeAppearance="@style/BottomDialogCardAppShapeAppearance">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/filter_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="450dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filters_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/screen_padding">

                <com.yanivsos.mixological.ui.views.FilterHeaderView
                    android:id="@+id/ingredient_header_fhv"
                    style="@style/FilterHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fhv_headerText="@string/filter_ingredients"
                    app:fontFamily="@font/fty_delirium_ncv"
                    app:layoutDescription="@xml/filer_badge_scene" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/search_container_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/screen_radius"
                    app:boxCornerRadiusBottomStart="@dimen/screen_radius"
                    app:boxCornerRadiusTopEnd="@dimen/screen_radius"
                    app:boxCornerRadiusTopStart="@dimen/screen_radius"
                    app:boxStrokeColor="?attr/colorAccent"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/header_text_color"
                    app:helperTextTextAppearance="@style/SearchTextAppearance"
                    app:hintTextColor="@color/secondary_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ingredient_search_query_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jesa_script_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/ingredient_search_hint"
                        android:imeOptions="actionSearch"
                        android:inputType="textNoSuggestions"
                        android:textColor="@color/header_text_color"
                        android:textSize="14sp"
                        android:theme="@style/MyEditTextTheme" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filter_ingredients_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:layout_marginBottom="@dimen/screen_padding"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="5"
                    tools:listitem="@layout/list_item_selectable_filter" />

                <com.yanivsos.mixological.ui.views.FilterHeaderView
                    android:id="@+id/alcoholic_header_fhv"
                    style="@style/FilterHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fhv_headerText="@string/filter_alcoholic"
                    app:fontFamily="@font/fty_delirium_ncv"
                    app:layoutDescription="@xml/filer_badge_scene" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filter_alcoholic_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/list_item_selectable_filter" />

                <View
                    android:id="@+id/glasses_div"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:layout_marginBottom="@dimen/screen_padding"
                    android:background="@drawable/divider" />

                <com.yanivsos.mixological.ui.views.FilterHeaderView
                    android:id="@+id/glasses_header_fhv"
                    style="@style/FilterHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fhv_headerText="@string/filter_glasses"
                    app:fontFamily="@font/fty_delirium_ncv"
                    app:layoutDescription="@xml/filer_badge_scene" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filter_glasses_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/list_item_selectable_filter" />

                <View
                    android:id="@+id/category_div"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:layout_marginBottom="@dimen/screen_padding"
                    android:background="@drawable/divider" />

                <com.yanivsos.mixological.ui.views.FilterHeaderView
                    android:id="@+id/category_header_fhv"
                    style="@style/FilterHeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fhv_headerText="@string/filter_categories"
                    app:fontFamily="@font/fty_delirium_ncv"
                    app:layoutDescription="@xml/filer_badge_scene" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filter_category_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/list_item_selectable_filter" />

                <View
                    android:id="@+id/ingredients_div"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_padding"
                    android:layout_marginBottom="@dimen/screen_padding"
                    android:background="@drawable/divider" />



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filters_header"
            style="@style/MyHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding"
            android:text="@string/filters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/fading_edge_height"
            android:background="@drawable/white_fading_edge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filters_header" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/fading_edge_height"
            android:background="@drawable/white_fading_edge"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>